# trireme

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: cpu-reference.md  introduction.md
examples/: euler-001.tras  hello.tras
include/: convert.h  convert.hpp  cpu.hpp  debug_io.hpp  exceptions.hpp  flags.hpp  hexad.hpp  io.hpp  memory.hpp  opcode.hpp  registers.hpp  ternary_math.hpp  word.hpp
include/assembler/: assembler.hpp
include/assembler/detail/: actions.hpp  directives.hpp  firstpass_actions.hpp  grammar.hpp  instruction_actions.hpp  instructions.hpp  state.hpp  tokens.hpp
include/detail/: character_to_value.hpp  convert_impl.hpp
include/shell/: shell.hpp
src/: cpu.cpp  debug_io.cpp  flags.cpp  hexad.cpp  io.cpp  main.cpp  memory.cpp  opcode.cpp  registers.cpp  word.cpp
src/assembler/: CMakeLists.txt  assembler.cpp
src/shell/: CMakeLists.txt  shell.cpp
tests/: convert_test.cpp  hexad_test.cpp  ternary_math_test.cpp  testmain.cpp
